airs\refac(front): #3613.3 update zoho form
-  update Zoho form to the new changes


Former-commit-id: 318e170df260bdb5e956ddb10b5c0f42bfbd228a

--- a/airs/theme/2020/templates/base.html
+++ b/airs/theme/2020/templates/base.html
@@ -304,6 +304,11 @@
       </div>
     <!-- Footer -->
       {% include "footer.html" %}
+      {% assets output="static/js/form.min.js", "js/tmp/form.min.js" %}
+      <script type="text/javascript"
+              src="{{ SITEURL }}/{{ ASSET_URL }}">
+      </script>
+      {% endassets %}
  <!-- Cookie consent -->
 
     <!-- Initialize Animation on Scroll -->
