--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -193,42 +193,42 @@
         <div class="contact-form w-100">
           <div id="crmWebToEntityForm" class="zcwf_lblLeft crmWebToEntityForm">
             <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-            <form action="https://crm.zoho.com/crm/WebForm" name=WebForm4687720000000504044 method="POST" onSubmit="javascript:document.charset='UTF-8'; return checkMandatory4687720000000504044(); return validateForm()" accept-charset="UTF-8">
-              <input type="text" style="display:none;" name="xnQsjsdp" value="1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d" />
-              <input type="hidden" name="zc_gad" id="zc_gad" value="" />
-              <input type="text" style="display:none;" name="xmIwtLD" value="78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210" />
-              <input type="text"  style="display:none;" name="actionType" value="Q3VzdG9tTW9kdWxlMQ==" />
-              <input type="text" style="display:none;" name="returnURL" value="https://fluidattacks.com/contact-us/thank-you/" />
+            <form action="https://crm.zoho.com/crm/WebToLeadForm" name=WebToLeads4687720000000388007 method="POST" onSubmit="javascript:document.charset='UTF-8'; return checkMandatory4687720000000388007()" accept-charset="UTF-8">
+              <input type='text' style='display:none;' name='xnQsjsdp' value='1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2d'></input> 
+              <input type='hidden' name='zc_gad' id='zc_gad' value=''></input> 
+              <input type='text' style='display:none;' name='xmIwtLD' value='78c3d7dacbbcd07154bafdf9da4878771131756c5fc0387baa3f5706a0968b4b'></input> 
+              <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
+              <input type='text' style='display:none;' name='returnURL' value='https://fluidattacks.com/contact-us/thank-you/' > </input>
     
               <div class="pv3 center">
                 <input type="text"
-                      id="NAME"
+                      id="Last_Name"
                       class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
-                      name="NAME"
+                      name="Last Name"
                       maxlength="120"
                       placeholder="Full Name" />
               </div>
               <div class="pv3 center">
                 <input type="text"
                       ftype="email"
-                      id="Email"
+                      id="Company"
                       class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
-                      name="Email"
+                      name="Company"
                       maxlength="100"
                       placeholder="Email" />
               </div>
               <div class="pv3 center">
-                <input id="COBJ1CF6"
-                      name="COBJ1CF6"
-                      maxlength="255"
+                <input id="Country"
+                      name="Country"
+                      maxlength="100"
                       type="hidden"
                       value=""/>
                 <label for="COBJ1CF2"
                     class="db">
                 </label>
-                <input  id="COBJ1CF2"
+                <input  id="Mobile"
                         maxlength="30"
-                        name="COBJ1CF2"
+                        name="Mobile"
                         type="text"
                         class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
                         required
@@ -247,29 +247,26 @@
                       src="{{ SITEURL }}/{{ ASSET_URL }}">
               </script>
               {% endassets %}
-              {% assets output="static/js/form.min.js", "js/tmp/form.min.js" %}
-              <script src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
-              {% endassets %}
               <div class="pv3 center">
-                <select id="COBJ1CF5"
-                        name="COBJ1CF5"
+                <select id="LEADCF23"
+                        name="LEADCF23"
                         class="gray db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1"
                         required>
                   <option value="-None-">
                     How can we help you?</option>
                   <option value="I want a service proposal">
                     I want a service proposal</option>
-                  <option value="I am looking for a job">
-                    I am looking for a job</option>
-                  <option value="I want a Demo">
+                  <option value="I&#x20;want&#x20;a&#x20;Demo">
                     I want a Demo</option>
-                  <option value="I want to be a partner">
+                  <option value="I&#x20;am&#x20;looking&#x20;for&#x20;a&#x20;Job">
+                    I am looking for a job</option>
+                  <option value="I&#x20;want&#x20;to&#x20;be&#x20;a&#x20;partner">
                     I want to be a partner</option>
                 </select>
               </div>
               <div class="poi dn pv3 center">
-                <select id="COBJ1CF3"
-                        name="COBJ1CF3"
+                <select id="LEADCF24"
+                        name="LEADCF24"
                         class="gray roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1">
                   <option value="-None-">Products of interest:</option>
                   <option value="Undetermined">
@@ -286,13 +283,6 @@
                       Please select an option
                 </span>
               </div>
-              <div class="msg dn pv3 center">       
-                <textarea  id="COBJ1CF4"
-                          name="COBJ1CF4"
-                          wrap="soft"
-                          class="w-100 h4 center"
-                          placeholder="Message"></textarea>
-              </div>
               <div class="g-recaptcha ma-auto w6 center"
                   data-sitekey="6LdUZt8ZAAAAAIZuuUl4N3iIsL3FMevSSmuRSFmx"
                   data-theme="light"
@@ -303,123 +293,101 @@
               <div  id="recapErr" style="font-size:12px;color:red;visibility:hidden;">
               Captcha validation failed. If you are not a robot then please try again.
               </div>
-                <div class="tc">
-                  <input type="submit"
-                        id="formsubmit"
-                        class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer mh3"
-                        value="Submit"
-                        title="Submit" />
-                  <input type="reset"
-                        class="br2 button-white pv3 bt-pd bt-trans c-fluid-bk b roboto pointer outline-transparent mh3"
-                        name="reset"
-                        value="Reset"
-                        title="Reset" />
-                </div>
-                <script>
-                  var mndFileds=new Array("NAME","Email","COBJ1CF2","COBJ1CF5","COBJ1CF6");
-                  var fldLangVal=new Array("Full name","Email","Mobile","How can we help you?","Country"); 
-                  var name="";
-                  var email="";
-              
+              <div class="tc">
+                <input type="submit"
+                      id="formsubmit"
+                      class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer mh3"
+                      value="Submit"
+                      title="Submit" />
+                <input type="reset"
+                      class="br2 button-white pv3 bt-pd bt-trans c-fluid-bk b roboto pointer outline-transparent mh3"
+                      name="reset"
+                      value="Reset"
+                      title="Reset" />
+              </div>
+              <script>
+                var mndFileds=new Array('Company','Last Name','Mobile','LEADCF23');
+                var fldLangVal=new Array('Email','Full name','Mobile','How can we help you'); 
+                var name='';
+                var email='';
+    
                 /* Do not remove this code. */
-                  function rccallback()
+                function rccallback()
                 {
-                  if(document.getElementById("recap")!=undefined){
-                    document.getElementById("recap").setAttribute("captcha-verified",true);
+                  if(document.getElementById('recap')!=undefined){
+                    document.getElementById('recap').setAttribute('captcha-verified',true);
                   }
-                  if(document.getElementById("recapErr")!=undefined && document.getElementById("recapErr").style.visibility == "visible" ){
-                    document.getElementById("recapErr").style.visibility="hidden";
+                  if(document.getElementById('recapErr')!=undefined && document.getElementById('recapErr').style.visibility == 'visible' ){
+                    document.getElementById('recapErr').style.visibility='hidden';
                   }
                 }
                 function reCaptchaAlert()
                 {
-                  var recap = document.getElementById("recap");
-                  if( recap !=undefined && recap.getAttribute("captcha-verified") == "false")
+                  var recap = document.getElementById('recap');
+                  if( recap !=undefined && recap.getAttribute('captcha-verified') == 'false')
                   {
-                    document.getElementById("recapErr").style.visibility="visible";
+                    document.getElementById('recapErr').style.visibility='visible';
                     return false;
                   }
                   return true;
                 }
-                function validateEmail()
-                {
-                  var emailFld = document.querySelectorAll("[ftype=email]");
-                  var i;
-                  for (i = 0; i < emailFld.length; i++)
-                  {
-                    var emailVal = emailFld[i].value;
-                    if((emailVal.replace(/^\s+|\s+$/g, "")).length!=0 )
-                    {
-                      var atpos=emailVal.indexOf("@");
-                      var dotpos=emailVal.lastIndexOf(".");
-                      if (atpos<1 || dotpos<atpos+2 || dotpos+2>=emailVal.length)
-                      {
-                        alert("Please enter a valid email address. ");
-                        emailFld[i].focus();
-                        return false;
-                      }
+    
+                function checkMandatory4687720000000388007() {
+                for(i=0;i<mndFileds.length;i++) {
+                  var fieldObj=document.forms['WebToLeads4687720000000388007'][mndFileds[i]];
+                  if(fieldObj) {
+                  if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
+                  if(fieldObj.type =='file')
+                    { 
+                    alert('Please select a file to upload.'); 
+                    fieldObj.focus(); 
+                    return false;
+                    } 
+                  alert(fldLangVal[i] +' cannot be empty.'); 
+                          fieldObj.focus();
+                          return false;
+                  }  else if(fieldObj.nodeName=='SELECT') {
+                        if(fieldObj.options[fieldObj.selectedIndex].value=='-None-') {
+                    alert(fldLangVal[i] +' cannot be none.'); 
+                    fieldObj.focus();
+                    return false;
                     }
-                  }
-                  return true;
-                }
-              
-                    function checkMandatory4687720000000504044() {
-                  for(i=0;i<mndFileds.length;i++) {
-                    var fieldObj=document.forms["WebForm4687720000000504044"][mndFileds[i]];
-                    if(fieldObj) {
-                    if (((fieldObj.value).replace(/^\s+|\s+$/g, "")).length==0) {
-                      if(fieldObj.type =="file")
-                      { 
-                        alert("Please select a file to upload."); 
-                        fieldObj.focus(); 
-                        return false;
-                      } 
-                    alert(fldLangVal[i] +" cannot be empty."); 
-                              fieldObj.focus();
-                              return false;
-                    }  else if(fieldObj.nodeName=="SELECT") {
-                              if(fieldObj.options[fieldObj.selectedIndex].value=="-None-") {
-                      alert(fldLangVal[i] +" cannot be none."); 
-                      fieldObj.focus();
-                      return false;
-                        }
-                    } else if(fieldObj.type =="checkbox"){
-                        if(fieldObj.checked == false){
-                      alert("Please accept  "+fldLangVal[i]);
-                      fieldObj.focus();
-                      return false;
-                        } 
-                      } 
-                      try {
-                          if(fieldObj.name == "Last Name") {
-                      name = fieldObj.value;
-                            }
-                    } catch (e) {}
+                  } else if(fieldObj.type =='checkbox'){
+                  if(fieldObj.checked == false){
+                    alert('Please accept  '+fldLangVal[i]);
+                    fieldObj.focus();
+                    return false;
+                    } 
+                  } 
+                  try {
+                      if(fieldObj.name == 'Last Name') {
+                    name = fieldObj.value;
                       }
-                  }
-                  if(!validateEmail()){return false;}
-                  
-                  if(!reCaptchaAlert()){return false;}
-                  document.querySelector(".crmWebToEntityForm .formsubmit").setAttribute("disabled", true);
+                  } catch (e) {}
+                        }
                 }
-              
-              function tooltipShow(el){
-                var tooltip = el.nextElementSibling;
-                var tooltipDisplay = tooltip.style.display;
-                if(tooltipDisplay == "none"){
-                  var allTooltip = document.getElementsByClassName("zcwf_tooltip_over");
-                  for(i=0; i<allTooltip.length; i++){
-                    allTooltip[i].style.display="none";
-                  }
-                  tooltip.style.display = "block";
-                }else{
-                  tooltip.style.display="none";
+                if(!reCaptchaAlert()){return false;}
+                  document.querySelector('.crmWebToEntityForm .formsubmit').setAttribute('disabled', true);
                 }
-              }
+    
+                function tooltipShow(el){
+                  var tooltip = el.nextElementSibling;
+                  var tooltipDisplay = tooltip.style.display;
+                  if(tooltipDisplay == 'none'){
+                    var allTooltip = document.getElementsByClassName('zcwf_tooltip_over');
+                    for(i=0; i<allTooltip.length; i++){
+                      allTooltip[i].style.display='none';
+                    }
+                    tooltip.style.display = 'block';
+                  }else{
+                    tooltip.style.display='none';
+                  }
+                }
               </script>
-                <!-- Do not remove this --- Analytics Tracking code starts --><script id="wf_anal" src="https://crm.zohopublic.com/crm/WebFormAnalyticsServeServlet?rid=78c3d7dacbbcd07154bafdf9da487877e22d1c6218228967e11c43d493492210gid1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2dgid0553f79ba9ccf83e1be97f6851b4205dc78530f131c55496a36cdc928fa214e9gid14f4ec16431e0686150daa43f3210513"></script><!-- Do not remove this --- Analytics Tracking code ends. -->
-            </div>
-          </form>
+              <!-- Do not remove this --- Analytics Tracking code starts -->
+              <script id='wf_anal' src='https://crm.zohopublic.com/crm/WebFormAnalyticsServeServlet?rid=78c3d7dacbbcd07154bafdf9da4878771131756c5fc0387baa3f5706a0968b4bgid1a8b1be45eb673e71a5b1925197e4664b5207c89778ad1e7315be647827aaa2dgid885e3c1045bd9bdcc91bdf30f82b5696gid14f4ec16431e0686150daa43f3210513'></script>
+              <!-- Do not remove this --- Analytics Tracking code ends. -->
+            </form>
           </div>
         </div>
       </div>
